syntax = "proto3";
package kanthor.dataplane.v1;
option go_package = "github.com/scrapnode/kanthor/dataplane/server/grpc/protos";

service Dataplane {
  rpc PutMessage(PutMessageReq) returns (PutMessageRes) {}
}

message PutMessageReq {
  string app_id = 1;
  string type = 2;
  string body = 3;
}

message PutMessageRes {
  string id = 1;
  string bucket = 2;
  int64 timestamp = 3;
}